--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.0.1"
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -21,4 +21,8 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile files('libs/volley.jar')
+    compile files('libs/gson-2.2.4.jar')
+    compile('de.keyboardsurfer.android.widget:crouton:1.8.1') {
+        exclude group: 'com.google.android', module: 'support-v4'
+    }
 }
